--- a/react-connectucla/src/pages/addEvent.css
+++ b/react-connectucla/src/pages/addEvent.css
@@ -36,13 +36,14 @@
   body {
     padding: 0%;
     margin: 0%;
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
+    background-color: #e7f2fd;
   }
   
   a {
     color: white;
     text-decoration: none;
-    margin: 10px;
+    /* margin: 10px; */
     font-size: 25px;
   }
   
@@ -54,10 +55,12 @@
   }
   
   .cpContainer {
+    margin-top:30px;
+    margin-bottom: 30px;
     width: 500px;
     height: auto;
     padding: 20px;
-    background-color: #1E90FF;
+    background-color: rgba(139, 184, 232, 0.8);
     border-radius: 12px;
     color: white;
     display: flex;
@@ -68,14 +71,14 @@
   .cpContainer h2 {
     text-align: center;
   }
-  .cpContainer button {
+  /* .cpContainer button {
     color: black;
     border: 0;
     padding: 8px;
     border-radius: 8px;
     right:800px;
     cursor: pointer;
-  }
+  } */
   .cpContainer label {
     font-size: 15px;
   }
@@ -83,13 +86,14 @@
     margin-top: 30px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
   }
   
   .inputGp input,
   .inputGp textarea {
     font-size: 18px;
     border: none;
-    border-radius: 2px;
+    border-radius: 5px;
     padding: 5px;
   }
   
@@ -104,21 +108,25 @@
     margin-top: 20px;
     height: 40px;
     border: none;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     cursor: pointer;
     font-size: 18px;
     text-align: center;
   }
-  input,
+  /* input,
   textarea {
     margin-top: 5px;
-  }
+  } */
   
-  .post .postTextContainer {
+  /* .post .postTextContainer {
     word-wrap: break-word;
     height: auto;
     max-height: 400px;
     width: 100%;
     overflow: hidden;
     overflow-y: auto;
+  } */
+  .submitButton {
+    background-color: rgb(3, 52, 90, .80);
+    color: white;
   }
