--- a/react-connectucla/public/style.css
+++ b/react-connectucla/public/style.css
@@ -1,5 +1,5 @@
 *{
     margin: 0;
     font-family: 'Public Sans', sans-serif;
-    background-color: rgb(205, 205, 226)
+    background-color: white;
 }
