More bug fixing for rsvpButton. Was being passed invalid props (no userId because {user} wasn't fetched) from both postPage and card.js. Added a check before rendering the rsvpButton like to check that user is valid - also added more to the useEvent render [] box to ensure that the user was being fetched before rsvpButton props were passed

--- a/react-connectucla/src/pages/login/login.css
+++ b/react-connectucla/src/pages/login/login.css
@@ -36,7 +36,7 @@
     margin-top: 1rem;
     border-radius: 10px;
     padding: 20px;
-    background-color: rgba(139, 184, 232, 0.5);
+    background-color: #8bb8e880;
 }
 
 .login .loginBox .loginInput{
